Implemented suggestions from catbref to avoid potential thread safety issue in peer arrays.